TRAC-5732 fixed menu button alignment

--- a/src/app/components/widgets/nft-timeline/nft-timeline.component.scss
+++ b/src/app/components/widgets/nft-timeline/nft-timeline.component.scss
@@ -413,6 +413,7 @@ p {
   color: #5b5b5b;
   cursor: pointer;
   border-radius: 50%;
+  margin-right: -8px;
 }
 
 .menu-text {
@@ -433,7 +434,7 @@ p {
   column-gap: 10px;
 }
 
-.mat-menu-item{
+.mat-menu-item {
   line-height: 30px;
   height: 30px;
 }
