--- a/src/app/components/widgets/pie-chart-widget/pie-chart-widget.component.scss
+++ b/src/app/components/widgets/pie-chart-widget/pie-chart-widget.component.scss
@@ -198,6 +198,7 @@ h2 button {
   color: #5b5b5b;
   cursor: pointer;
   border-radius: 50%;
+  margin-right: -8px;
 }
 
 .menu-text {
@@ -218,7 +219,7 @@ h2 button {
   column-gap: 10px;
 }
 
-.mat-menu-item{
+.mat-menu-item {
   line-height: 30px;
   height: 30px;
 }
